ma com template refinements

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "workbench.colorTheme": "Material Theme",
+  "workbench.colorTheme": "Winter is Coming (Dark Blue)",
   "material-icon-theme.activeIconPack": "react"
 }
